--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.76",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "dotenv": "^16.4.4",
     "eslint-config-react-app": "^7.0.1",
     "lucide-react": "^0.317.0",
     "react": "^18.2.0",
