--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -40,7 +40,7 @@ jobs:
   Analysis:
     runs-on: ubuntu-latest
     environment:
-      name: ProjetAPI
+      name: ProjectApp
 
     steps:
       - name: Analyze with SonarQube
